# LAB7-8OOP

./: CMakeLists.txt  main.cpp
Repository/: Repository.cpp  Repository.h
Service/: Service.cpp  Service.h
Tests/: Tests.cpp  Tests.h
UI/: UI.cpp  UI.h
